--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
   },
   "devDependencies": {
     "sass-embedded": "^1.88.0"
-  }
+  },
+  "packageManager": "pnpm@9.12.1+sha1.7084e7df42ee1d221994c2c2599277a2a937f050"
 }
